<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>server_python</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="www@todo.todo">www</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf_ros</depend>
  <depend>tf_transformations</depend>
  <depend>builtin_interfaces</depend>
  <depend>scout_msgs</depend>
  <depend>autoparking_action</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
